fix default handling

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,6 +25,7 @@
     - telegraf
 
 - name: template files
+  when: telegraf_templates != ""
   register: templates
   delegate_to: localhost
   find:
