--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,9 @@
-- name: restart telegraf
+# Standards: 0.1
+---
+- name: Restart telegraf
   systemd:
     name: telegraf
     state: restarted
     daemon_reload: yes
+
+...
