--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,10 @@
 # Standards: 0.1
 ---
+# @meta author:value: [Thomas Boerger](https://github.com/tboerger)
+# @meta dependencies: >
+# [docker](https://github.com/rolehippie/docker)
+# [sudo](https://github.com/rolehippie/sudo)
+# @end
 galaxy_info:
   author: Thomas Boerger
   description: Ansible role to configure telegraf
