--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,11 @@
 # Standards: 0.1
 ---
 # @meta author:value: [Thomas Boerger](https://github.com/tboerger)
-# @meta dependencies: >
-# [docker](https://github.com/rolehippie/docker)
-# [sudo](https://github.com/rolehippie/sudo)
+# @meta dependencies:value: >
+# [
+#   "[docker](https://github.com/rolehippie/docker)",
+#   "[sudo](https://github.com/rolehippie/sudo)"
+# ]
 # @end
 galaxy_info:
   author: Thomas Boerger
