--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,10 +2,8 @@
 ---
 # @meta author:value: [Thomas Boerger](https://github.com/tboerger)
 # @meta dependencies:value: >
-# [
-#   "[docker](https://github.com/rolehippie/docker)",
-#   "[sudo](https://github.com/rolehippie/sudo)"
-# ]
+# [docker](https://github.com/rolehippie/docker)
+# [sudo](https://github.com/rolehippie/sudo)
 # @end
 galaxy_info:
   author: Thomas Boerger
