Use openstack and toolhippie images for testing

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,33 @@
-# Standards: 0.1
+# Standards: 1.2
 ---
 # @meta author:value: [Thomas Boerger](https://github.com/tboerger)
+# @meta description: >
+# [![Source Code](https://img.shields.io/badge/github-source%20code-blue?logo=github&logoColor=white)](https://github.com/rolehippie/telegraf)
+# [![Build Status](https://img.shields.io/drone/build/rolehippie/telegraf/master?logo=drone)](https://cloud.drone.io/rolehippie/telegraf)
+# [![License: Apache-2.0](https://img.shields.io/github/license/rolehippie/telegraf)](https://github.com/rolehippie/telegraf/blob/master/LICENSE)
+#
+# Ansible role to install and configure telegraf.
+#
+# ## Sponsor
+#
+# [![Proact Deutschland GmbH](https://proact.eu/wp-content/uploads/2020/03/proact-logo.png)](https://proact.eu)
+#
+# Building and improving this Ansible role have been sponsored by my employer **Proact Deutschland GmbH**.
+# @end
 # @meta dependencies:value: >
-# [docker](https://github.com/rolehippie/docker)
-# [sudo](https://github.com/rolehippie/sudo)
+# [rolehippie.docker](https://github.com/rolehippie/docker)
+# [rolehippie.sudo](https://github.com/rolehippie/sudo)
 # @end
 galaxy_info:
   author: Thomas Boerger
-  description: Ansible role to configure telegraf
+  description: Ansible role to install and configure telegraf
   license: Apache-2.0
-  min_ansible_version: 2.5
+  min_ansible_version: 2.10
   platforms:
     - name: Ubuntu
       versions:
-        - xenial
         - bionic
+        - focal
   galaxy_tags:
     - telegraf
     - metrics
