--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,3 +1,4 @@
+# Standards: 1.2
 ---
 - name: Converge
   hosts: all
@@ -5,3 +6,5 @@
     - role: docker
     - role: sudo
     - role: telegraf
+
+...
