feat: restructure workflows and enable automated releases

--- a/molecule/requirements.yml
+++ b/molecule/requirements.yml
@@ -2,11 +2,7 @@
 ---
 collections: []
 roles:
-  - src: https://github.com/rolehippie/docker
-    scm: git
-    version: master
-  - src: https://github.com/rolehippie/sudo
-    scm: git
-    version: master
+  - name: rolehippie.docker
+  - name: rolehippie.sudo
 
 ...
