--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,7 +7,7 @@
 # [![Readme Workflow](https://github.com/rolehippie/telegraf/actions/workflows/readme.yml/badge.svg)](https://github.com/rolehippie/telegraf/actions/workflows/readme.yml)
 # [![Galaxy Workflow](https://github.com/rolehippie/telegraf/actions/workflows/galaxy.yml/badge.svg)](https://github.com/rolehippie/telegraf/actions/workflows/galaxy.yml)
 # [![License: Apache-2.0](https://img.shields.io/github/license/rolehippie/telegraf)](https://github.com/rolehippie/telegraf/blob/master/LICENSE)
-# [![Ansible Role](https://img.shields.io/ansible/role/51453)](https://galaxy.ansible.com/rolehippie/telegraf)
+# [![Ansible Role](https://img.shields.io/badge/role-rolehippie.telegraf-blue)](https://galaxy.ansible.com/rolehippie/telegraf)
 #
 # Ansible role to install and configure telegraf.
 #
