--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart telegraf
-  systemd:
+  ansible.builtin.systemd:
     name: telegraf
     state: restarted
     daemon_reload: True
