--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
   ansible.builtin.apt_repository:
     repo: "deb https://repos.influxdata.com/{{ telegraf_repo_distribution | default(ansible_distribution) | lower }} {{ telegraf_repo_release | default(ansible_distribution_release) }} stable"
     filename: telegraf
-    update_cache: False
+    update_cache: false
     state: absent
   tags:
     - telegraf
@@ -26,7 +26,7 @@
   ansible.builtin.apt_repository:
     repo: "deb [signed-by={{ telegraf_keyring }}] https://repos.influxdata.com/{{ telegraf_repo_distribution | default(ansible_distribution) | lower }} {{ telegraf_repo_release | default(ansible_distribution_release) }} stable"
     filename: telegraf
-    update_cache: True
+    update_cache: true
     state: present
   tags:
     - telegraf
@@ -49,7 +49,7 @@
     - telegraf
 
 - name: Find template files
-  when: telegraf_templates | default(False)
+  when: telegraf_templates | default(false)
   register: telegraf_templates_find
   delegate_to: localhost
   ansible.builtin.find:
@@ -62,7 +62,7 @@
   loop: "{{ telegraf_templates_find.files }}"
   loop_control:
     label: "/etc/telegraf/telegraf.d/{{ item.path | basename }}"
-  when: telegraf_templates | default(False)
+  when: telegraf_templates | default(false)
   notify:
     - Restart telegraf
   ansible.builtin.template:
@@ -81,7 +81,7 @@
   ansible.builtin.user:
     name: telegraf
     groups: docker
-    append: True
+    append: true
   tags:
     - telegraf
 
@@ -92,7 +92,7 @@
   ansible.builtin.user:
     name: telegraf
     groups: sudo
-    append: True
+    append: true
   tags:
     - telegraf
 
@@ -112,9 +112,9 @@
   ansible.builtin.systemd:
     name: telegraf
     state: started
-    daemon_reload: True
-    masked: False
-    enabled: True
+    daemon_reload: true
+    masked: false
+    enabled: true
   tags:
     - telegraf
 
